--- a/index.html
+++ b/index.html
@@ -175,6 +175,65 @@
             font-size: 12px;
             color: var(--white);
         }
+        @media (max-width: 240px) {
+            .header-content {
+                padding: 10px;
+                gap: 5px;
+            }
+
+            .container {
+                padding: 0 10px;
+            }
+
+            .server-card {
+                padding: 10px;
+                margin-bottom: 10px;
+            }
+
+            .server-header {
+                margin-bottom: 10px;
+                padding-bottom: 5px;
+            }
+
+            .server-stats {
+                grid-template-columns: 1fr;
+                gap: 5px;
+            }
+
+            .stat-item {
+                padding: 10px;
+            }
+
+            .stat-label {
+                font-size: 0.7em;
+            }
+
+            .stat-value {
+                font-size: 1em;
+            }
+
+            .graphs {
+                padding: 10px;
+            }
+
+            .response-graph {
+                height: 80px;
+                padding: 5px;
+                gap: 1px;
+            }
+
+            .usage-graph {
+                gap: 5px;
+            }
+
+            .usage-bar {
+                height: 50px;
+            }
+
+            .usage-label {
+                font-size: 10px;
+            }
+        }
     </style>
 </head>
 <body>
